--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -55,6 +55,9 @@
     "license": "SEE LICENSE IN LICENSE.md",
     "dependencies": {
         "@oclif/core": "^1.13.10",
+        "@react-oauth/google": "^0.12.1",
+        "@types/express-session": "^1.18.0",
+        "@types/jsonwebtoken": "^9.0.6",
         "@types/lodash": "^4.14.202",
         "@types/uuid": "^9.0.7",
         "async-mutex": "^0.4.0",
@@ -66,10 +69,12 @@
         "express": "^4.17.3",
         "express-basic-auth": "^1.2.1",
         "express-rate-limit": "^6.9.0",
+        "express-session": "^1.18.0",
         "flowise-components": "workspace:^",
         "flowise-ui": "workspace:^",
         "http-errors": "^2.0.0",
         "http-status-codes": "^2.3.0",
+        "jsonwebtoken": "^9.0.2",
         "lodash": "^4.17.21",
         "moment": "^2.29.3",
         "moment-timezone": "^0.5.34",
