--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -50,6 +50,7 @@
         "react-syntax-highlighter": "^15.5.0",
         "reactflow": "^11.5.6",
         "redux": "^4.0.5",
+        "redux-thunk": "^3.1.0",
         "rehype-mathjax": "^4.0.2",
         "rehype-raw": "^7.0.0",
         "remark-gfm": "^3.0.1",
